--- a/JASA/content/preferential_v2.tex
+++ b/JASA/content/preferential_v2.tex
@@ -158,7 +158,7 @@ The following property displays a sufficient condition on $x$, $\epsilon$, $a_{i
 Let $E_k^p = \sum_{j=1}^p \hat\phi_{kk} \hat{f}_{jk}$ . In the regions where $x$ and $\epsilon$ are such that
 \begin{equation*}
 %x^{a_{ik}-1}\frac{f_{ik}}{E_{d_{ik}}}\left(a_{ik}(1-\epsilon) -x(a_{ik}-b_{ik}) \right) \geq b_{ik}\frac{(F_k^p)^{a_{ik}}\phi_{kk}^{a_{ik}-1}}{F_k^N}
-x^{a_{ik}-1}\left(a_{ik}(E_k^N-\epsilon) -x(a_{ik}-b_{ik}) \right) \geq b_{ik} E_k^p
+x^{a_{ik}-1}\left(a_{ik}(E_k^N-\epsilon) -x(a_{ik}-b_{ik}) \right) \geq b_{ik}(E_k^p)^{a_{ik}}
 \end{equation*}
 $P(d_{i,k}^{(N)} \geq x+\epsilon | d_{i,k}^{(p)} \geq x,\M_e)$ increases with $x$.
 \end{proposition}
@@ -195,10 +195,11 @@ where $C=\frac{\left(\int_{x'}^1t^{a-1}(1-t)^{b-1}dt\right)^2}{(qx'+\epsilon')^{
 &\Leftrightarrow x'^{a-1} a(1-\epsilon') \geq \frac{F_k^p}{F_k^N} ( x'^a(a-b) + b) \\
 &\Leftrightarrow x'^{a-1} \left(a(1-\epsilon') - x'(a-b)\frac{F_k^p}{F_k^N} \right) \geq b \frac{F_k^p}{F_k^N}
 \end{align*}
-Finally, let $E_k^l=\sum_{j=1}^l \phi_{kk}f_{jk}=\phi_{kk}F_k^l$, by rolling back the variable changes, one obtains
+Finally, let $E_k^l=\sum_{j=1}^l \phi_{kk}f_{jk}=\phi_{kk}F_k^l$, by rolling back the change of variables, one obtains
 \begin{equation*}
-x^{a-1}\left(a(E_k^N-\epsilon) -x(a-b) \right) \geq b E_k^p
+x^{a-1}\left(a(E_k^N-\epsilon) -x(a-b) \right) \geq b (E_k^p)^a
 \end{equation*}
+which concludes the proof.
 
 
 \end{proof}
@@ -210,7 +211,7 @@ x^{a-1}\left(a(E_k^N-\epsilon) -x(a-b) \right) \geq b E_k^p
 
 
 %As one can note, when $F_k^p$ is small (typically in the first steps of the process), then the above condition is likely to be met and \imb\ satisfies the preferential attachment effect. However, when $F_k^p$ gets closer to $F_k^N$ the above condition is no longer met.
-As one can note, when $x$ is large, $\epsilon$ is small and $b_{ik}-a_{ik}>0$ (which roughly means that the class $k$ concentrates less than half of the capacaity of the network) then the above condition is likely to be met and \imb satisfies the local preferential attachment effect.
+As one can note, when $x$ is large, $\epsilon$ is small and $b_{ik}-a_{ik}>0$ (which roughly means that the class $k$ concentrates less than half of the capacaity of the network), then the above condition is likely to be met. In this situation, the \imb satisfies the local preferential attachment effect.
 
 We now present an experimental illustration of the above theoretical results.
 
