--- a/JASA/content/intro.tex
+++ b/JASA/content/intro.tex
@@ -2,9 +2,9 @@
 \section{Introduction}
 \label{sec:intro}
 
-Several powerful relational learning models have been proposed to solve the problem commonly referred to as \textit{link prediction} that consists in predicting the likelihood of a future association between two nodes in a network \cite{LibenNowell07,HassanZaki11}. Among such models, the class of stochastic mixed membership models has received much attention as such models can be used to discover hidden properties and infer new links in social networks. Two main models in this class have been proposed and studied in the literature: the latent feature model \cite{BMF} and its non-parametric extension \cite{ILFRM}, and the mixed-membership stochastic block model \cite{MMSB}, and its non parametric extension \cite{iMMSB,fan2015dynamic}. These models fall in the category of mixed-membership models that encompasses a wide range of models (such as admixture and topic model) able to  learn complex patterns from structured data \cite{airoldi2014handbook}.
+Several powerful relational learning models have been proposed to solve the problem commonly referred to as \textit{link prediction} that consists in predicting the likelihood of a future association between two nodes in a network \cite{LibenNowell07,HassanZaki11}. Among such models, the class of stochastic mixed membership models has received much attention as such models can be used to discover hidden properties and infer new links in social networks. Two main models in this class have been proposed and studied in the literature: the latent feature model \cite{meeds2006modeling} and its non-parametric extension \cite{miller2009nonparametric}, and the mixed-membership stochastic block model \cite{airoldi2009mixed}, and its non parametric extension \cite{koutsourelakis2008finding,fan2015dynamic}. These models fall in the category of mixed-membership models that encompasses a wide range of models (such as admixture and topic model) able to  learn complex patterns from structured data \cite{airoldi2014handbook}.
 
 Nevertheless, although drawn from a wide range of domains, real world social networks exhibit general properties and one can wonder if these models are able to capture these properties. In this work, we focus on the \textit{preferential attachment} effect \cite{Newman2010, Barabasi2003}. Preferential attachment states that a nodes is more likely to create connections with nodes having many connections. In graph theory, preferential attachment is used to explain the emergence of scale-free networks that are characterized by a power-law degree distribution. The aim of our study is to assess to which extent stochastic mixed membership models comply with this property.
-%However, as these models belong to the family of Bayesian model,  we can study their behavior in two settings.  In the first one, denoted $\mathcal{M}_g$, we consider the model as a pure generative model and given the parameters, we use it to generate artificial networks. Like this, we can study the model properties based on their expectation over the random parameters. In the second setting, denoted $\mathcal{M}_e$ and corresponding to the typical use of these models for link prediction, we consider that the parameters are unknown but some observations (\textit{i.e.} an existing network ) are available and are used to estimate the distribution underlying the models. 
+%However, as these models belong to the family of Bayesian model,  we can study their behavior in two settings.  In the first one, denoted $\mathcal{M}_g$, we consider the model as a pure generative model and given the parameters, we use it to generate artificial networks. Like this, we can study the model properties based on their expectation over the random parameters. In the second setting, denoted $\mathcal{M}_e$ and corresponding to the typical use of these models for link prediction, we consider that the parameters are unknown but some observations (\textit{i.e.} an existing network ) are available and are used to estimate the distribution underlying the models.
 
 The remainder of the paper is organized as follows:  Section~\ref{sec:background} describes the two main stochastic mixed membership models used for link prediction in social networks and the settings in which they are used. Section \ref{sec:burstiness} introduces formal definitions of preferential attachment and studies how stochastic mixed membership models relate to them. Section~\ref{sec:exps} illustrates the theoretical results on two synthetic and two real networks. Section~\ref{sec:rel-work} then discusses related work, while Section~\ref{sec:concl} concludes the study.
