--- a/JASA/a.bib
+++ b/JASA/a.bib
@@ -1,22 +1,18 @@
 @inbook{Easley2010,
   author = {Easley, David and Kleinberg, Jon},
-  year = 2010,
+  year = {2010},
   title = {Networks, Crowds and Markets: Reasoning about a Highly Connected World},
   chapter = {Networks in their Surrounding Contexts},
   publisher = {Cambridge University Press},
-  pages={85--118}
-}
+  pages={85--118},}
 
-@inproceedings{BMF, crossref = {meeds2006modeling} }
 @inproceedings{meeds2006modeling,
     title={Modeling dyadic data with binary latent factors},
     author={Meeds, Edward and Ghahramani, Zoubin and Neal, Radford M and Roweis, Sam T},
     booktitle={Advances in Neural Information Processing Systems},
     pages={977--984},
-    year={2006}
-}
+    year={2006},}
 
-@inproceedings{ILAM, crossref = {palla2012infinite} }
 @inproceedings{palla2012infinite,
     author    = {Konstantina Palla and David A. Knowles and Zoubin Ghahramani},
     title     = {An Infinite Latent Attribute Model for Network Data},
@@ -29,19 +25,15 @@
     Booktitle = {Proceedings of the 29th International Conference on Machine Learning},
     Author = {Konstantina Palla and Zoubin Ghahramani and David A. Knowles},
     Year = {2012},
-    Pages = {1607--1614}
-} 
+    Pages = {1607--1614},}
 
-@inproceedings{ILFRM, crossref = {miller2009nonparametric} }
 @inproceedings{miller2009nonparametric,
   title={Nonparametric latent feature models for link prediction},
   author={Miller, Kurt and Jordan, Michael I. and Griffiths, Thomas L.},
   booktitle={Advances in Neural Information Processing Systems},
   pages={1276--1284},
-  year={2009}
-}
+  year={2009},}
 
-@article{IBP, crossref = {griffiths2011indian} }
 @article{griffiths2011indian,
   title={The indian buffet process: An introduction and review},
   author={Griffiths, Thomas L. and Ghahramani, Zoubin},
@@ -73,8 +65,7 @@
     volume={11},
     pages={167--185},
     year={2010},
-    publisher={College Publications}
-}
+    publisher={College Publications},}
 @article{escobar1995bayesian,
   title={Bayesian density estimation and inference using mixtures},
   author={Escobar, Michael D and West, Mike},
@@ -83,9 +74,7 @@
   number={430},
   pages={577--588},
   year={1995},
-  publisher={Taylor \& Francis}
-}
-@article{HDP, crossref = {teh2006hierarchical} }
+  publisher={Taylor \& Francis},}
 @article{teh2006hierarchical,
     author = {Yee W. Teh and Michael I. Jordan and Matthew J. Beal and David M. Blei},
     title = {Hierarchical {D}irichlet {P}rocesses},
@@ -93,8 +82,7 @@
     volume = {101},
     number = {476},
     pages = {1566-1581},
-    year = {2006}
-}
+    year = {2006},}
 
 @article{goldenberg2010survey,
     title={A survey of statistical network models},
@@ -104,34 +92,26 @@
     number={2},
     pages={129--233},
     year={2010},
-    publisher={Now Publishers Inc.}
-}
-@INPROCEEDINGS{IRM, crossref = {kemp2006learning} }
+    publisher={Now Publishers Inc.},}
 @inproceedings{kemp2006learning,
     title={Learning systems of concepts with an infinite relational model},
     author={Kemp, Charles and Tenenbaum, Joshua B. and Griffiths, Thomas L. and Yamada, Takeshi and Ueda, Naonori},
     booktitle={AAAI},
     volume={3},
     pages={5},
-    year={2006}
-}
-@INPROCEEDINGS{IHRM, crossref = {xu2006learning} }
+    year={2006},}
 @article{xu2006learning,
   title={Learning infinite hidden relational models},
   author={Xu, Zhao and Tresp, Volker and Yu, Kai and Kriegel, Hans-Peter},
   journal={Uncertainity in Artificial Intelligence (UAI2006)},
-  year={2006}
-}
-@inproceedings{MMSB, crossref = {airoldi2009mixed} }
+  year={2006},}
 @inproceedings{airoldi2009mixed,
   title={Mixed membership stochastic blockmodels},
   author={Airoldi, Edoardo M. and Blei, David M. and Fienberg, Stephen E. and Xing, Eric P.},
   booktitle={Advances in Neural Information Processing Systems},
   pages={33--40},
-  year={2009}
-}
+  year={2009},}
 
-@INPROCEEDINGS{IMRM, crossref = {morup2011infinite} }
 @inproceedings{morup2011infinite,
   title={Infinite multiple membership relational modeling for complex networks},
   author={M{\o}rup, Morten and Schmidt, Mikkel N and Hansen, Lars Kai},
@@ -139,15 +119,12 @@
   pages={1--6},
   year={2011},
 }
-@INPROCEEDINGS{iMMSB, crossref = {koutsourelakis2008finding} }
 @inproceedings{koutsourelakis2008finding,
   title={Finding Mixed-Memberships in Social Networks.},
   author={Koutsourelakis, Phaedon-Stelios and Eliassi-Rad, Tina},
   booktitle={AAAI Spring Symposium: Social Information Processing},
   pages={48--53},
-  year={2008}
-}
-@article{dimmsb, crossref = {fan2015dynamic} }
+  year={2008},}
 @article{fan2015dynamic,
     author    = {Xuhui Fan and Longbing Cao and Richard Yi Da Xu},
     title     = {Dynamic Infinite Mixed-Membership Stochastic Blockmodel},
@@ -155,33 +132,27 @@
     volume    = {abs/1306.2999},
     year      = {2013},
 }
-@INPROCEEDINGS{ferguson_dp, crossref = {ferguson1973bayesian} }
 @article{ferguson1973bayesian,
 title={A Bayesian analysis of some nonparametric problems},
 author={Ferguson, Thomas S},
 journal={The annals of statistics},
 pages={209--230},
 year={1973},
-publisher={JSTOR}
-}
-@INPROCEEDINGS{yyt_dp, crossref = {teh2010dirichlet} }
+publisher={JSTOR},}
 @incollection{teh2010dirichlet,
 title={Dirichlet {P}rocess},
 author={Teh, Yee Whye},
 booktitle={Encyclopedia of machine learning},
 pages={280--287},
 year={2010},
-publisher={Springer}
-}
+publisher={Springer},}
 @article{antoniak1974mixtures,
 title={Mixtures of Dirichlet processes with applications to Bayesian nonparametric problems},
 author={Antoniak, Charles E},
 journal={The annals of statistics},
 pages={1152--1174},
 year={1974},
-publisher={JSTOR}
-}
-@INPROCEEDINGS{DCA, crossref = {buntine2006discrete} }
+publisher={JSTOR},}
 @inproceedings{buntine2006discrete,
     author    = {Wray L. Buntine and Aleks Jakulin},
     title     = {Discrete Component Analysis},
@@ -202,7 +173,7 @@ publisher={JSTOR}
     series = {KDD '08},
     year = {2008},
     pages = {462--470},
-} 
+}
 @proceedings{DBLP:conf/kdd/2008,
   editor    = {Ying Li and
                Bing Liu and
@@ -222,7 +193,7 @@ publisher={JSTOR}
  isbn = {0199206651, 9780199206650},
  publisher = {Oxford University Press, Inc.},
  address = {New York, NY, USA},
-} 
+}
 
 @article{newman2001scientific,
     title={Scientific collaboration networks. {II}. Shortest paths, weighted networks, and centrality},
@@ -232,10 +203,9 @@ publisher={JSTOR}
     number={1},
     pages={016132},
     year={2001},
-    publisher={APS}
-}
+    publisher={APS},}
 
- 
+
 @book{Barabasi2003,
   author    = {Albert{-}L{\'{a}}szl{\'{o}} Barab{\'{a}}si},
   title     = {Linked - how everything is connected to everything else and what it
@@ -259,13 +229,11 @@ publisher={JSTOR}
   booktitle = {Social Network Data Analytics},
   pages     = {243--275},
   year      = {2011},
-  crossref  = {DBLP:books/sp/social11},
   url       = {http://dx.doi.org/10.1007/978-1-4419-8462-3_9},
   doi       = {10.1007/978-1-4419-8462-3_9},
   timestamp = {Sat, 18 Feb 2012 20:20:09 +0100},
   biburl    = {http://dblp.uni-trier.de/rec/bib/books/sp/social2011/HasanZ11},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
-}
+  bibsource = {dblp computer science bibliography, http://dblp.org},}
 
 @book{DBLP:books/sp/social11,
   editor    = {Charu C. Aggarwal},
@@ -275,8 +243,7 @@ publisher={JSTOR}
   isbn      = {978-1-4419-8461-6},
   timestamp = {Sat, 18 Feb 2012 20:12:34 +0100},
   biburl    = {http://dblp.uni-trier.de/rec/bib/books/sp/social11},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
-}
+  bibsource = {dblp computer science bibliography, http://dblp.org},}
 
 
 @article{mcpherson2001birds,
@@ -285,8 +252,7 @@ publisher={JSTOR}
   journal={Annual review of sociology},
   pages={415--444},
   year={2001},
-  publisher={JSTOR}
-}
+  publisher={JSTOR},}
 @article{lazarsfeld1954friendship,
   title={Friendship as a social process: A substantive and methodological analysis},
   author={Lazarsfeld, Paul F and Merton, Robert K and others},
@@ -294,8 +260,7 @@ publisher={JSTOR}
   volume={18},
   number={1},
   pages={18--66},
-  year={1954}
-}
+  year={1954},}
 
 
 
@@ -306,7 +271,7 @@ publisher={JSTOR}
  series = {WWW '10},
  year = {2010},
  pages = {601--610},
-} 
+}
 
 @article{barabasi1999emergence,
   title={Emergence of scaling in random networks},
@@ -341,9 +306,8 @@ publisher={JSTOR}
     booktitle = {Proceedings of the 33rd International ACM SIGIR Conference on Research and Development in Information Retrieval},
     year = {2010},
     pages = {234--241},
-} 
+}
 
-@article{AMMSB, crossref = {gopalan2013efficient} }
 @article{gopalan2013efficient,
     title={Efficient discovery of overlapping communities in massive networks},
     author={Gopalan, Prem K. and Blei, David M.},
@@ -358,15 +322,13 @@ publisher={JSTOR}
     author={Kim, Dae Il and Gopalan, Prem K. and Blei, David and Sudderth, Erik},
     booktitle={Advances in Neural Information Processing Systems},
     pages={962--970},
-    year={2013}
-}
+    year={2013},}
 
 @book{airoldi2014handbook,
     title={Handbook of Mixed Membership Models and Their Applications},
     author={Airoldi, Edoardo M. and Blei, David and Erosheva, Elena A. and Fienberg, Stephen E.},
     year={2014},
-    publisher={CRC Press}
-}
+    publisher={CRC Press},}
 @article{albert2002statistical,
     title={Statistical mechanics of complex networks},
     author={Albert, R{\'e}ka and Barab{\'a}si, Albert-L{\'a}szl{\'o}},
@@ -379,18 +341,16 @@ publisher={JSTOR}
 
 
 @BOOK{feller_68,
-	AUTHOR = "W. Feller",
-	TITLE = "An Introduction to Probability Theory and Its Applications, Vol. I",
-	PUBLISHER = "Wiley, New York",
-	YEAR = "1968"
-}
+	AUTHOR = {W. Feller},
+	TITLE = {An Introduction to Probability Theory and Its Applications, Vol. I},
+	PUBLISHER = {Wiley, New York},
+	YEAR = {1968},}
 
 @BOOK{barabasi_burst,
-	AUTHOR = "A.-L. Barab\'asi",
-	TITLE = "Bursts: The Hidden Patterns Behind Everything We Do, from Your E-mail to Bloody Crusades",
-	PUBLISHER = "{Plume}, Penguin Book, USA",
-	YEAR = "2011"
-}
+	AUTHOR = {A.-L. Barab\'asi},
+	TITLE = {Bursts: The Hidden Patterns Behind Everything We Do, from Your E-mail to Bloody Crusades},
+	PUBLISHER = {{Plume}, Penguin Book, USA},
+	YEAR = {2011},}
 @article{cohen2003scale,
     title={Scale-free networks are ultrasmall},
     author={Cohen, Reuven and Havlin, Shlomo},
@@ -425,8 +385,7 @@ publisher={JSTOR}
     number={2},
     pages={269--281},
     year={1979},
-    publisher={Institute of Mathematical Statistics}
-}
+    publisher={Institute of Mathematical Statistics},}
 @article{clauset2009power,
     title={Power-law distributions in empirical data},
     author={Clauset, Aaron and Shalizi, Cosma Rohilla and Newman, Mark EJ},
@@ -445,17 +404,15 @@ publisher={JSTOR}
   pages = {440--442},
   title = {Collective dynamics of /`small-world/' networks},
   volume = 393,
-  year = {1998}
-}
+  year = {1998},}
 
-@article{Blondel2008,                                                                                                                                                                        
+@article{Blondel2008,
   author    = {Vincent D. Blondel and Jean{-}Loup Guillaume and Renaud Lambiotte and Etienne Lefebvre},
   journal   = {Journal of statistical mechanics: theory and experiment},
   title     = {Fast unfolding of community  in large networks},
   year      = {2008},
   volume    = {10},
-  pages = {P10008}
-}
+  pages = {P10008},}
 
 @article{largeron2015,
     author = {Largeron, Christine AND Mougel, Pierre-Nicolas AND Rabbany, Reihaneh AND Za{\"\i}ane, Osmar R.},
@@ -468,21 +425,18 @@ publisher={JSTOR}
     url = {http://dx.doi.org/10.1371%2Fjournal.pone.0122777},
     pages = {e0122777},
     number = {4},
-    doi = {10.1371/journal.pone.0122777}
-}        
+    doi = {10.1371/journal.pone.0122777},}
 @article{jacobs2014unified,
     title={A unified view of generative models for networks: models, methods, opportunities, and challenges},
     author={Jacobs, Abigail Z. and Clauset, Aaron},
     journal={arXiv preprint arXiv:1411.4070},
-    year={2014}
-}
+    year={2014},}
 @inproceedings{hoff2008modeling,
     title={Modeling homophily and stochastic equivalence in symmetric relational data},
     author={Hoff, Peter},
     booktitle={Advances in Neural Information Processing Systems},
     pages={657--664},
-    year={2008}
-}
+    year={2008},}
 @article{bickel2009nonparametric,
     title={A nonparametric view of network models and Newman--Girvan and other modularities},
     author={Bickel, Peter J and Chen, Aiyou},
@@ -491,15 +445,13 @@ publisher={JSTOR}
     number={50},
     pages={21068--21073},
     year={2009},
-    publisher={National Acad Sciences}
-}
+    publisher={National Acad Sciences},}
 @inproceedings{Li11,
   title={Generalized latent factor models for social network analysis},
   author={Li, Wu-Jun and Yeung, Dit-Yan and Zhang, Zhihua},
   booktitle={Proceedings of the 22nd International Joint Conference on Artificial Intelligence (IJCAI), Barcelona, Spain},
   pages={1705},
-  year={2011}
-}
+  year={2011},}
 
 @inproceedings{Lee2015,
   author    = {Jay Lee and
@@ -519,8 +471,7 @@ publisher={JSTOR}
     title = {Link prediction based on local information considering preferential attachment},
     volume = {443},
         pages = {537-542},
-    year = {2016}
-}
+    year = {2016},}
 @inproceedings{Zhang2016,
   author    = {Hongyi Zhang and
                Tong Zhao and
@@ -532,7 +483,7 @@ publisher={JSTOR}
                Artificial Intelligence, {IJCAI}},
   pages     = {3938--3944},
   year      = {2016},
-} 
+}
 @inproceedings{Ciglan2013,
   title={On community detection in real-world networks and the importance of degree assortativity},
   author={Ciglan, Marek and Laclav{\'\i}k, Michal and N{\o}rv{\aa}g, Kjetil},
@@ -546,15 +497,14 @@ publisher={JSTOR}
   title = {DANCer: dynamic attributed networks with community structure generation},
   pages = {1-43},
   year = {2017},
-} 
+}
 @article{Buckley2001,
   author = {P. G. Buckley and D. Osthus},
   journal = {Discrete Mathematics},
   pages = {53-68},
   title = {Popularity based random graph models leading to a scale-free degree sequence},
   volume = {282},
-  year = {2001}
-} 
+  year = {2001},}
 
 @article{Kim2012,
   author    = {Myunghwan Kim and
@@ -565,7 +515,7 @@ publisher={JSTOR}
   number    = {1-2},
   pages     = {113--160},
   year      = {2012},
-} 
+}
 @article{Aiello2012,
  author = {Aiello, Luca Maria and Barrat, Alain and Schifanella, Rossano and Cattuto, Ciro and Markines, Benjamin and Menczer, Filippo},
  title = {Friendship Prediction and Homophily in Social Media},
@@ -574,13 +524,12 @@ publisher={JSTOR}
  number = {2},
  year = {2012},
  pages = {1--33},
-} 
+}
 @techreport{orbanz2009functional,
   title={Functional conjugacy in parametric Bayesian models},
   author={Orbanz, Peter},
   year={2009},
-  institution={Technical report, Univ. Cambridge}
-}
+  institution={Technical report, Univ. Cambridge},}
 @inproceedings{asuncion2009smoothing,
     title={On smoothing and inference for topic models},
     author={Asuncion, Arthur and Welling, Max and Smyth, Padhraic and Teh, Yee Whye},
@@ -593,8 +542,7 @@ title={A collapsed variational Bayesian inference algorithm for latent Dirichlet
 author={Teh, Yee W. and Newman, David and Welling, Max},
 booktitle={Advances in Neural Information Processing Systems},
 pages={1353--1360},
-year={2007}
-}
+year={2007},}
 
 
 @article{hoffman2013stochastic,
@@ -602,8 +550,7 @@ year={2007}
     author={Hoffman, Matthew D. and Blei, David M. and Wang, Chong and Paisley, John William},
     journal={Journal of Machine Learning Research},
     pages={1303--1347},
-    year={2013}
-}
+    year={2013},}
 @inproceedings{foulds2013stochastic,
     title={Stochastic collapsed variational Bayesian inference for latent Dirichlet allocation},
     author={Foulds, James and Boyles, Levi and DuBois, Christopher and Smyth, Padhraic and Welling, Max},
@@ -617,24 +564,21 @@ year={2007}
     journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
     pages={593--613},
     year={2009},
-    publisher={Wiley Online Library}
-}
+    publisher={Wiley Online Library},}
 @article{lu2011link,
     title={Link prediction in complex networks: A survey},
     author={L{\"u}, Linyuan and Zhou, Tao},
     journal={Physica A: Statistical Mechanics and its Applications},
     pages={1150--1170},
     year={2011},
-    publisher={Elsevier}
-}
+    publisher={Elsevier},}
 @article{robbins1951stochastic,
     title={A stochastic approximation method},
     author={Robbins, Herbert and Monro, Sutton},
     journal={The annals of mathematical statistics},
     pages={400--407},
     year={1951},
-    publisher={JSTOR}
-}
+    publisher={JSTOR},}
 @article{zhou2015negative,
   title={Negative binomial process count and mixture modeling},
   author={Zhou, Mingyuan and Carin, Lawrence},
@@ -649,15 +593,13 @@ year={2007}
     author={Zhou, Mingyuan and Carin, Lawrence},
     booktitle={Advances in Neural Information Processing Systems},
     pages={2546--2554},
-    year={2012}
-}
+    year={2012},}
 
 @article{zhou2012beta,
   title={Beta-negative binomial process and Poisson factor analysis},
   author={Zhou, Mingyuan and Hannah, Lauren A. and Dunson, David B. and Carin, Lawrence},
   journal={Journal of Machine Learning Research},
-  year={2012}
-}
+  year={2012},}
 
 @article{aicher2014learning,
   title={Learning latent block structure in weighted networks},
@@ -667,8 +609,7 @@ year={2007}
   number={2},
   pages={221--248},
   year={2014},
-  publisher={Oxford University Press}
-}
+  publisher={Oxford University Press},}
 @article{peixoto2018nonparametric,
   title={Nonparametric weighted stochastic block models},
   author={Peixoto, Tiago P.},
@@ -677,8 +618,7 @@ year={2007}
   number={1},
   pages={012306},
   year={2018},
-  publisher={APS}
-}
+  publisher={APS},}
 
 @article{peixoto_graph-tool_2014,
     title = {The graph-tool python library},
@@ -695,8 +635,7 @@ year={2007}
     booktitle={Data Science and Advanced Analytics (DSAA), 2017 IEEE International Conference on},
     pages={706--715},
     year={2017},
-    organization={IEEE}
-}
+    organization={IEEE},}
 
 
 
