--- a/JASA/journal_version.tex
+++ b/JASA/journal_version.tex
@@ -143,7 +143,7 @@
 \and
 %%%%%%% Third author details
 \name{Christine Largeron}
-\address{Univ Lyon, UJM-Saint-Etienne, CNRS, Institut d’Optique Graduate School, LHC}
+\address{Univ. Lyon, UJM-Saint-Etienne, CNRS, Institut d’Optique Graduate School, LHC}
 \email{Christine.Largeron@univ-st-etienne.fr}
 }
 
